# justdavis-finances

./: .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  KNOWN_ISSUES.md  README.md  TEST_COVERAGE_GAPS.md  YNAB_DATA_WORKFLOW.md  coverage.json  pyproject.toml  renovate.json  todos.md
.claude/: settings.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  maintenance.md  user_story.md
.github/workflows/: claude-code-review.yml  quality.yml
amazon/: README.md  amazon_data_request_guide.md  extract_amazon_data.sh
analysis/amazon_transaction_matching/: README.md  match_scorer.py  match_single_transaction.py  match_transactions_batch.py  match_transactions_batch_v2.py  order_grouper.py  simplified_batch_processor.py  simplified_matcher.py  split_payment_matcher.py
analysis/amazon_transaction_matching/experimental/: match_single_transaction_simplified.py  match_transactions_batch_simplified.py  split_payment_matcher.py
analysis/amazon_transaction_matching/tests/: __init__.py  test_integration.py  test_match_scorer.py  test_order_grouper.py  test_split_payment_matcher.py
analysis/apple_transaction_matching/: README.md  VIEWING_UNMATCHED.md  apple_matcher.py  apple_receipt_loader.py  match_scorer.py  match_single_transaction.py  match_transactions_batch.py  unmatched_summary.sh  view_unmatched.py  ynab_apple_filter.py
analysis/apple_transaction_matching/tests/: __init__.py  test_apple_matcher.py  test_apple_receipt_loader.py  test_integration.py
analysis/cash_flow/: cash_flow_analysis.py
analysis/cash_flow/tests/: __init__.py  test_cash_flow_analysis.py
analysis/csv-tools/: README.md  open.nu
analysis/ynab_transaction_updater/: README.md  __init__.py  currency_utils.py  execute_mutations.py  generate_mutations.py  review_mutations.py  run_tests.py  split_calculator.py  test_approved.yaml  test_approved_95.yaml  test_delete.ndjson  test_mutations.yaml
analysis/ynab_transaction_updater/tests/: __init__.py  test_currency_utils.py  test_integration.py  test_split_calculator.py  test_unapproved_filtering.py
apple/: README.md
apple/docs/: email_analysis.md  receipt_formats.md
apple/docs/format_examples/: format_0b2b098f1cfd_example.eml  format_0b2b098f1cfd_example.html  format_15f27f88ae73_example.eml  format_15f27f88ae73_example.html  format_2ca23d52451f_example.eml  format_2ca23d52451f_example.html  format_42669d02a043_example.eml  format_42669d02a043_example.html  format_4702b26f1ff9_example.eml  format_4702b26f1ff9_example.html  format_68e6f9701ff7_example.eml  format_68e6f9701ff7_example.html  format_738bb70c023b_example.eml  format_738bb70c023b_example.html  format_a90cf3c2f793_example.eml  format_a90cf3c2f793_example.html  format_ac646b722e14_example.eml  format_ac646b722e14_example.html  format_b0aaedf3c7ae_example.eml  format_b0aaedf3c7ae_example.html  format_b5d1b61518cc_example.eml  format_b5d1b61518cc_example.html  format_cf2403f6ce4d_example.eml  (+9 more)
apple/scripts/: analyze_html_formats.py  debug_parser.py  enhanced_html_parser.py  export_receipts_to_json.py  extract_email_content.py  extract_receipt_metadata.py  fetch_receipt_emails.py  html_format_analysis.json  receipt_parser.py  validate_receipts.py
data/: .gitkeep
dev/: phase-2-type-checking-report.md  test-audit-2024-10-18.md  test-merge-plan-2024-10-18.md  test-merge-plan-2025-10-18.md  todos.md
dev/analysis/: dict-to-domain-model-opportunities.md
dev/designs/: 2026-03-08-bank-reconcile-apply-design.md  2026-03-08-bank-reconcile-apply-ux-redesign.md  bank-accounts-flow-integration.md
dev/docs/: ARCHITECTURE.md
dev/plans/: 2025-10-19-flow-execution-order-fix.md  README.md  bank-accounts-flow-integration-plan.md  phase-1-cli-simplification.md  phase-2-primitive-types.md  phase-3-datastore-infrastructure.md  phase-4-domain-models.md  phase-4.5-domain-model-completion.md  phase-5-test-overhaul.md  phase-6-documentation.md
dev/reports/: 2025-10-18-documentation-audit.md  2025-10-18-todo-audit.md  2026-03-10-ynab-direct-import-resync-discovery.md  2026-03-25-bank-reconciliation-starting-balance-review.md  2026-03-26-bank-reconciliation-mismatch-analysis.md  test-audit-2025-10-18.md
dev/scripts/: bank_reconciliation_diagnostic.py
dev/specs/: 2024-11-24-apple-receipt-extraction.md  2025-09-14-apple-transaction-matching.md  2025-09-20-ynab-transaction-updater.md  2025-09-21-amazon-data-workflow.md  2025-09-21-amazon-transaction-matching.md  2025-09-21-cash-flow-analysis.md  2025-09-21-code-quality.md  2025-09-21-csv-analysis-tools.md  2025-09-21-python-package-restructure.md  2025-09-21-ynab-data-workflow.md  2025-09-24-financial-flow-system.md  README.md
docs/: bank-accounts-reconciliation.md
docs/plans/: 2025-10-19-flow-execution-order-implementation.md  2025-10-25-apple-parser-overhaul.md  2025-10-25-parser-baseline-failures.txt  2025-10-25-parser-overhaul-results.md  2025-12-29-bank-account-reconciliation-design.md  2026-01-03-bank-reconciliation-implementation-part2.md  2026-01-03-bank-reconciliation-implementation.md
src/finances/: __init__.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  test_amazon_cli.py  test_analysis_cli.py  test_apple_cli.py  test_flow_system.py  test_ynab_cli.py
tests/fixtures/: __init__.py  e2e_helpers.py  synthetic_data.py
tests/integration/: __init__.py  test_amazon_cli_parameters.py  test_amazon_flow_nodes.py  test_amazon_unzipper.py  test_apple_cli_parameters.py  test_apple_email_fetcher.py  test_apple_flow_nodes.py  test_apple_loader.py  test_apple_parser.py  test_apple_parser_comprehensive.py  test_apple_parser_production.py  test_archive_management.py  test_cashflow_cli_parameters.py  test_cli_main.py  test_complete_workflow.py  test_config.py  test_flow_integration.py  test_flownode_interface.py  test_retirement_cli.py  test_ynab_cli_parameters.py  test_ynab_flow_nodes.py  test_ynab_loader.py
tests/performance/: __init__.py  test_performance.py
tests/test_data/: README.md
tests/unit/: __init__.py  test_change_detection.py
(+195 files in other folders)
